<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">45753334261</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="app_name">none*2</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="banner_ad_unit_id">ca-app-pub-1709022118330389/6412743352</string>
    <string name="big_help">Big help</string>
    <string name="can_you_help_me">Can you help me with this riddle of none*2? http://whatisnone.com</string>
    <string name="can_you_solve_this">Can you solve this? http://whatisnone.com</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="congratulations_you_have_reached">Congratulations, you have reached Level %1$s of none*2</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>
    <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">"80's Video Game Style Car Logo"</string>
    <string name="continuee">continue</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="friends_help">"Friend's help"</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="get_a_big_hint">Get a big hint</string>
    <string name="get_a_small_hint">Get a small hint</string>
    <string name="get_more">get more *</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hints">hints</string>
    <string name="i_have_completed">I have completed none*2 http://whatisnone.com/s/50</string>
    <string name="i_have_reached">I have reached level %1$s of none*2 http://whatisnone.com/r/%2$s</string>
    <string name="i_have_reached2">I have reached level %1$s of none*2 http://whatisnone.com</string>
    <string name="i_have_solved">I have solved %1$s levels of none*2 http://whatisnone.com/s/%2$s</string>
    <string name="license_failed">License check failed.</string>
    <string name="little_help">Little help</string>
    <string name="ok">OK</string>
    <string name="pay1">20* for free</string>
    <string name="pay1_value">Share</string>
    <string name="pay2">100*</string>
    <string name="pay2_value">$0.99</string>
    <string name="pay3">250*</string>
    <string name="pay3_value">$1.50</string>
    <string name="pay4">20* for free</string>
    <string name="pay4_value">Watch a video</string>
    <string name="pay5">30* for free</string>
    <string name="pay5_value">Take a survey</string>
    <string name="play_none_web">play none*365</string>
    <string name="please_wait">Please wait!</string>
    <string name="question">Question</string>
    <string name="replay">replay</string>
    <string name="settings">settings</string>
    <string name="share">Share</string>
    <string name="share_screen">Share a print screen and get hints from friends</string>
    <string name="share_your_success">share your success</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="signin_failure">An error occured on sign in</string>
    <string name="signin_other_error">Some error occured</string>
    <string name="sixty">60*</string>
    <string name="solve">solve</string>
    <string name="solved10">CgkI9fPxuKoBEAIQAg</string>
    <string name="solved15">CgkI9fPxuKoBEAIQAw</string>
    <string name="solved20">CgkI9fPxuKoBEAIQBA</string>
    <string name="solved25">CgkI9fPxuKoBEAIQBQ</string>
    <string name="solved30">CgkI9fPxuKoBEAIQBg</string>
    <string name="solved35">CgkI9fPxuKoBEAIQBw</string>
    <string name="solved40">CgkI9fPxuKoBEAIQCA</string>
    <string name="solved45">CgkI9fPxuKoBEAIQCQ</string>
    <string name="solved5">CgkI9fPxuKoBEAIQAQ</string>
    <string name="solved50">CgkI9fPxuKoBEAIQCg</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="subscription_period_monthly">Monthly</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_period_yearly">Yearly</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_hints">HintsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="twenty">20*</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="watch_carefully">"WATCH CAREFULLY FOR 9 SECONDS
%1$s"</string>
    <string name="you_dont_have_enough_stars">"You don't have enough stars"</string>
    <string name="you_have_completed">YOU HAVE COMPLETED NONE*2</string>
    <string name="you_have_solved">You have solved %1$s levels of none*2</string>
    <string name="you_must_type_an_answer">You must type an answer</string>
</resources>
