<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white_color" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0dip" android:id="@id/tv_question" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:layout_marginBottom="30.0dip" android:text="@string/congratulations" />
    <TextView android:textSize="16.0dip" android:gravity="center" android:id="@id/tv_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/you_have_solved" />
    <Button android:textSize="16.0dip" android:textColor="@color/black_color" android:id="@id/btn_share" android:background="@drawable/drawable_box_white" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/share_your_success" android:textAllCaps="false" />
    <Button android:textSize="16.0dip" android:textColor="@color/black_color" android:id="@id/btn_continue" android:background="@null" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/continuee" android:textAllCaps="false" />
    <Button android:textSize="16.0dip" android:textColor="@color/black_color" android:id="@id/btn_none_365" android:background="@null" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/play_none_web" android:textAllCaps="false" />
</LinearLayout>