<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <Button android:textSize="20.0dip" android:textColor="@color/white_color" android:gravity="center|top" android:id="@id/btn_close" android:background="@null" android:paddingTop="15.0dip" android:layout_width="60.0dip" android:layout_height="fill_parent" android:drawableTop="@drawable/x" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/white_color" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/drawable_line_light_transparent" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hints" android:layout_weight="1.0" />
            <TextView android:id="@id/tv_stars" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1500*" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/drawable_line_light_transparent" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/tv_question" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/question" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/drawable_line_light_transparent" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/tv_help1_big" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/little_help" android:layout_weight="1.0" />
                <TextView android:textSize="12.0dip" android:id="@id/tv_help1_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_a_small_hint" />
            </LinearLayout>
            <Button android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/btn_help1" android:background="@drawable/drawable_box_white" android:layout_width="130.0dip" android:layout_height="40.0dip" android:text="@string/twenty" />
            <TextView android:textColor="@color/black_color" android:gravity="center" android:id="@id/tv_hint1" android:visibility="gone" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="Large Text" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/drawable_line_light_transparent" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/tv_help2_big" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/big_help" android:layout_weight="1.0" />
                <TextView android:textSize="12.0dip" android:id="@id/tv_help2_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_a_big_hint" />
            </LinearLayout>
            <Button android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/btn_help2" android:background="@drawable/drawable_box_white" android:layout_width="130.0dip" android:layout_height="40.0dip" android:text="@string/sixty" />
            <TextView android:textColor="@color/black_color" android:gravity="center" android:id="@id/tv_hint2" android:visibility="gone" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="Large Text" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/drawable_line_light_transparent" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/tv_help3_big" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friends_help" android:layout_weight="1.0" />
                <TextView android:textSize="12.0dip" android:id="@id/tv_help3_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_screen" />
            </LinearLayout>
            <Button android:textSize="14.0dip" android:textColor="@color/black_color" android:id="@id/btn_help3" android:background="@drawable/drawable_box_white" android:layout_width="130.0dip" android:layout_height="40.0dip" android:text="@string/share" android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>