<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/white_color" android:id="@id/tv_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        <TextView android:textColor="@color/gray_light_color" android:id="@id/tv_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/L12" />
        <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New Text" android:layout_weight="1.0" />
        <TextView android:textColor="@color/gray_light_color" android:gravity="center" android:id="@id/tv_stars" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="1500*" />
        <Button android:textSize="20.0dip" android:textColor="@color/white_color" android:id="@id/btn_add" android:background="@null" android:padding="0.0dip" android:layout_width="20.0dip" android:layout_height="wrap_content" android:text="+" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_question" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:text="Question" android:layout_weight="1.0" />
        <ImageView android:id="@id/iv_question" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip" android:layout_weight="1.0" />
        <WebView android:id="@id/webView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="30.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip">
            <TextView android:textColor="@color/white_color" android:gravity="center" android:id="@id/tv_answer" android:background="@null" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
            <View android:id="@id/v_sep" android:background="@color/white_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <GridView android:gravity="center" android:layout_gravity="center" android:id="@id/gridview1" android:layout_width="fill_parent" android:layout_height="40.0dip" android:stretchMode="columnWidth" android:numColumns="10" android:layout_alignParentBottom="false" />
            <GridView android:gravity="center" android:layout_gravity="center" android:id="@id/gridview2" android:layout_width="fill_parent" android:layout_height="40.0dip" android:stretchMode="columnWidth" android:numColumns="10" android:layout_alignParentBottom="false" />
            <GridView android:gravity="center" android:layout_gravity="center" android:id="@id/gridview3" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:stretchMode="columnWidth" android:numColumns="9" android:layout_alignParentBottom="false" />
            <GridView android:gravity="center" android:layout_gravity="center" android:id="@id/gridview4" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:stretchMode="columnWidth" android:numColumns="8" android:layout_alignParentBottom="false" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="15.0dip" android:textStyle="normal" android:textColor="@color/white_color" android:id="@id/btn_hints" android:background="@drawable/drawable_box_transparent" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginRight="2.0dip" android:text="@string/hints" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textSize="15.0dip" android:textStyle="normal" android:textColor="@color/white_color" android:id="@id/btn_solve" android:background="@drawable/drawable_box_transparent" android:clickable="false" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginLeft="2.0dip" android:text="@string/solve" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" ads:adSize="BANNER" ads:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>